--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,6 @@
-<p style="color: green"><%= notice %></p>
+<h1>Article Details Page</h1>
 
-<%= render @article %>
-
-<div>
-  <%= link_to "Edit this article", edit_article_path(@article) %> |
-  <%= link_to "Back to articles", articles_path %>
-
-  <%= button_to "Destroy this article", @article, method: :delete %>
-</div>
+<p><strong>Title: </strong><%= @article.title %></p>
+<p><strong>Description: </strong><%= @article.description%></p>
+<p><strong>Added At: </strong><%= @article.created_at %></p>
+<p><strong>Last Updated At: </strong><%= @article.updated_at %></p>
